# dropdown items hover color instead of background # cart icon overflow fixed

--- a/assets/base.css
+++ b/assets/base.css
@@ -2377,7 +2377,7 @@ input[type='checkbox'] {
 
 .header__icon--cart {
     position: relative;
-    margin-right: -1.2rem;
+    width: fit-content;
 }
 
 @media screen and (max-width: 989px) {
